Add teacher and specialization controller
hiện thực chức năng thêm xóa sửa giảng viên và chuyên ngành

--- a/FitPortal/FitPortal/FitPortal.csproj
+++ b/FitPortal/FitPortal/FitPortal.csproj
@@ -38,6 +38,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Views\Spacialization\" />
     <Folder Include="wwwroot\Data\" />
     <Folder Include="wwwroot\Images\post\" />
   </ItemGroup>
